verif/test/deca/context/invalid/already-declared-verif.res
src/test/deca/context/invalid/already-declared.deca:10:8: Variable 'x' is already defined in the environement of expressions
